# telegram-board-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  render.yaml
config/: bots.json  channels.json  default.json  masks.json  telegram.json
plugins/: LICENSE
plugins/caspers-telegram-miniapp/: README.md  plugin.py
plugins/content-engine/: README.md  plugin.py
plugins/supabase-jewelry/: .mcp.json  README.md  plugin.py
src/: __init__.py  config.py  health.py  integration.py  logging_config.py  main.py
src/agents/: __init__.py  agent_core.py  agent_manager.py  memory.py
src/bots/: __init__.py  bot_core.py  bot_manager.py  handlers.py  middleware.py
src/channels/: __init__.py  channel_adapters.py  channel_manager.py  channel_registry.py  message_router.py  webhook_manager.py
src/masks/: __init__.py  mask_manager.py  mask_registry.py  mask_templates.py  persona_engine.py
src/plugins/: __init__.py  base.py  content_plugin.py  jewelry_plugin.py  miniapp_plugin.py  plugin_loader.py
src/telegram/: __init__.py  adapter.py  commands.py  forum.py  managed_bot.py  media_handler.py  message_formatter.py  network.py  webhook.py
src/utils/: __init__.py  message_queue.py  metrics.py  rate_limiter.py  security.py
systemd/: telegram-board.service
tests/: conftest.py  test_agent_core.py  test_agent_manager.py  test_agents.py  test_bot_core.py  test_bot_core_v2.py  test_bot_manager.py  test_channels.py  test_channels_v2.py  test_commands.py  test_config.py  test_formatter.py  test_forum.py  test_handlers.py  test_health_logging.py  test_integration_v2.py  test_main.py  test_managed_bot.py  test_masks.py  test_masks_v2.py  test_media_handler.py  test_memory.py  test_middleware.py  test_network.py  test_plugins.py  test_telegram.py  test_utils.py  test_webhook.py
(+19 files in other folders)
