[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-board-system"
version = "2.0.0"
description = "Production multi-bot, multi-channel Telegram management system with mask support, agent framework, and plugin architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bobby", email = "bobby@example.com" },
]
keywords = ["telegram", "bot", "multi-bot", "agent", "mask", "channel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
qrcode = [
    "qrcode[pil]>=7.0",
]

[project.scripts]
telegram-board = "cli:main"
tbs = "cli:main"

[project.urls]
Homepage = "https://github.com/Bzcasper/telegram-board-system"
Repository = "https://github.com/Bzcasper/telegram-board-system"
Issues = "https://github.com/Bzcasper/telegram-board-system/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
